refactor: make Vector2D a record for better practise